# obliv-c

./: .gitignore  CNAME  LICENSE-oblivcc  Makefile.in  README.md  TODO.obliv  archives.html  authors.html  categories.html  findlib.md  oblivc.vim  paper.html  tags.html
SCDtoObliv/: SCDtoObliv.py  pyOblivTest.py
TinyGarble-master/: .gitattributes  .travis.yml  CMakeLists.txt  README.md  configure  float_add_syn_32_1cc.scd
TinyGarble-master/a23/aes/: CMakeLists.txt
TinyGarble-master/a23/aes/test/: e.txt  o.txt
TinyGarble-master/a23/bubble-sort/: bubble-sort.c  p.txt
TinyGarble-master/a23/bubble-sort/test/: e.txt
TinyGarble-master/a23/compare/: compare.c
TinyGarble-master/a23/dijkstra/: Makefile  dijkstra.c
TinyGarble-master/a23/dijkstra/test/: o.txt
TinyGarble-master/a23/hamming/: hamming.c
TinyGarble-master/a23/include/: sections.lds
TinyGarble-master/a23/lib/: CMakeLists.txt  Makefile  a23_main_testing.cpp  start.S
TinyGarble-master/a23/matrix-mul/: p.txt
TinyGarble-master/a23/mem-test/: CMakeLists.txt
TinyGarble-master/a23/merge-sort/: CMakeLists.txt
TinyGarble-master/a23/mul/: p.txt
TinyGarble-master/a23/mul/test/: o.txt
TinyGarble-master/a23/sum/: CMakeLists.txt
TinyGarble-master/a23/sum/test/: o.txt
TinyGarble-master/crypto/: BN.h  OT_extension.cpp  OT_test.cpp
TinyGarble-master/garbled_circuit/: CMakeLists.txt  garbled_circuit.cpp  garbled_circuit.h  garbled_circuit_main.cpp  garbled_circuit_test.cpp  garbled_circuit_testing.cpp
TinyGarble-master/scd/: V2SCD_ALL.sh.in  parse_netlist.h  scd.h  scd_evaluator.cpp  scd_evaluator_test.cpp  v_2_scd.cpp  v_2_scd_test.cpp
TinyGarble-master/tcpip/: CMakeLists.txt  tcpip.cpp  tcpip_testsuit.h
TinyGarble-master/util/: CMakeLists.txt  log.h  util.cpp  util_test.cpp
author/: samee-zahur.html
category/: about.html  paper.html
feeds/: about.atom.xml  all.atom.xml  paper.atom.xml  samee-zahur.atom.xml  samee-zahur.rss.xml
lib/perl5/App/: Cilly.pm.in
ocamlutil/: Makefile.ocaml  pretty.ml  util.ml
scd/: .gitignore  README-JustGarble
scd/a23/: CMakeLists.txt
scd/a23/aes/: Makefile  aes.c  p.txt
scd/a23/aes/test/: g.txt
scd/a23/bubble-sort/: CMakeLists.txt  Makefile
scd/a23/bubble-sort/test/: o.txt
scd/a23/compare/: CMakeLists.txt  Makefile  p.txt
scd/a23/compare/test/: g.txt
scd/a23/dijkstra/: CMakeLists.txt  p.txt
scd/a23/dijkstra/test/: g.txt
scd/a23/hamming/: CMakeLists.txt  Makefile  p.txt
scd/a23/hamming/test/: e.txt
scd/a23/include/: common.mk
scd/a23/matrix-mul/: CMakeLists.txt  Makefile  matrix-mul.c
scd/a23/matrix-mul/test/: g.txt  o.txt
scd/a23/mem-test/: Makefile  mem-test.c  p.txt
scd/a23/mem-test/test/: o.txt
scd/a23/merge-sort/: Makefile  merge-sort.c  p.txt
scd/a23/mul/: CMakeLists.txt  Makefile  mul.c
scd/a23/mul/test/: e.txt  g.txt
scd/a23/sum/: Makefile  p.txt  sum.c
scd/a23/sum/test/: g.txt
scd/a23/temp/: Makefile  p.txt  temp.c
scd/a23/tools/: Makefile  amber-code32.sh  amber-elfsplitter
scd/crypto/: BN.cpp  BN_test.cpp  CMakeLists.txt  OT.cpp  OT.h  OT_extension.h  OT_extension_test.cpp  OT_main.cpp  aes.h  block.h
scd/garbled_circuit/: a23_test_main.cpp  garbled_circuit_high_mem.cpp  garbled_circuit_high_mem.h  garbled_circuit_low_mem.cpp  garbled_circuit_low_mem.h  garbled_circuit_testing.h  garbled_circuit_util.cpp  garbled_circuit_util.h
scd/scd/: CMakeLists.txt  README.md  parse_netlist.cpp  scd.cpp  scd_evaluator.h  scd_evaluator_main.cpp  scheduling.cpp  scheduling.h  v_2_scd.h  v_2_scd_main.cpp
scd/tcpip/: tcpip.h  tcpip_test.cpp  tcpip_testsuit.cpp
scd/util/: common.h  log.cpp  minunit.h  tinygarble_config.h.in  util.h
src/: cil.ml  cil.mli  ciloptions.ml  formatlex.mll  main.ml
src/ext/: arithabs.ml  oblivUtils.ml  processObliv.ml  simplifyTagged.ml  simplifyTagged.mli  ssa.ml
src/ext/oblivc/: atomic_queue.c  atomic_queue.h  bcrandom.c  bcrandom.h  commitReveal.c  commitReveal.h  copy.c  copy.oc  copy.oh  dualex.c  nnob.c  nnob.h  obliv.c  obliv.h  obliv.oh  obliv_bits.c  obliv_bits.h  obliv_common.h  obliv_copy_internal.h  obliv_debug.h  obliv_debugProto.c  obliv_floatProto.c  obliv_float_add.c  obliv_float_add.h  obliv_float_addINPUTTEST.c  obliv_float_addOLD.c  obliv_float_div.c  obliv_float_eq.c  obliv_float_le.c  obliv_float_lt.c  obliv_float_mult.c  obliv_float_neg.c  obliv_float_ops.h  obliv_float_sub.c  obliv_network_utils.c  obliv_nnob.c  obliv_psi.h  obliv_transport.c  obliv_types.h  obliv_types_internal.h  (+7 more)
src/ext/processObliv/: META  oblivUtils.ml  processObliv.ml  simplifyTagged.ml  simplifyTagged.mli
src/ext/simplify/: simplify.ml
src/frontc/: cabs.ml  cabs2cil.ml  cabs2cil.mli  clexer.mll  cparser.mly  cprint.ml
src/ocamlutil/: errormsg.ml
test/linreg/: Makefile  a.out  genData.py  linreg.c  linreg.h  linreg.oc
test/oblivc/: MergeSort.c  README.txt
test/oblivc/aes/: Makefile  README.txt  aes.c  aes.h  aes.oc
test/oblivc/average/: average.c  average.oc
test/oblivc/benchmark/: Makefile  benchmark.c  benchmark.oc  run.sh
test/oblivc/common/: Makefile.simple  util.c  util.h
test/oblivc/psi/: Makefile  (+3 more)
test/olinReg/: linReg.oc
test/testFloat/: Makefile  a.out  testFloatOps.c  testFloatOps.oc
testFloat/: Makefile  a.out  floatAdd.c  floatAdd.h  floatAdd.oc  floatAdd.oh  parse_netlist.c  testFloat.c  testFloat.h  testFloatAdd.c  testFloatAdd.h  testFloatAdd.oc  testFloatOps.c  testFloatOps.h  testFloatOps.oc
tutorial/: README.md  mpc_data_analysis.aux  mpc_data_analysis.out  mpc_data_analysis.tex  mpc_poster.tex
tutorial/IEEEtran/: Makefile  mpc_poster.tex  references.bib
tutorial/linReg/: Makefile  README.md  gendat.py  linReg.c  linReg.h  test.data
tutorial/olinReg/: Makefile  README.md  gendat.py  linReg.c  linReg.h  linReg.oh
tutorial/psi/: Makefile  a.out  psi.oc  psi.oc.cil.c  psi.oc.cil.i  psi.oc.i  waksman.c
web/: Makefile  README.md  config.toml  index.html
web/content/: .#main.md  main.md
web/images/: images.pptx
web/layouts/: #index.html#  index.html
web/public/: CNAME  index.html  index.xml  sitemap.xml
web/shortcodes/: pdflink.html
(+104 files in other folders)
