add_subdirectory ("aes")
add_subdirectory ("bubble-sort")
add_subdirectory ("compare")
add_subdirectory ("merge-sort")
add_subdirectory ("dijkstra")
add_subdirectory ("hamming")
add_subdirectory ("mem-test")
add_subdirectory ("mul")
add_subdirectory ("matrix-mul")
add_subdirectory ("sum")
add_subdirectory ("lib")